backend/src/algo/parser/algorithm_parser.go
// Code generated from grammars/AlgorithmParser.g4 by ANTLR 4.12.0. DO NOT EDIT.

package algoparser // AlgorithmParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr/antlr4/runtime/Go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type AlgorithmParser struct {
	*antlr.BaseParser
}

var algorithmparserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	literalNames           []string
	symbolicNames          []string
	ruleNames              []string
	predictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func algorithmparserParserInit() {
	staticData := &algorithmparserParserStaticData
	staticData.literalNames = []string{
		"", "'all'", "'any'", "'branches'", "'consecutive'", "'do'", "'goal'",
		"'helpers'", "'if'", "'none'", "'piece'", "'pos'", "'position'", "'prepare'",
		"'runs'", "'step'", "'steps'", "':'", "','", "'?'", "'''", "'('", "')'",
		"'['", "']'",
	}
	staticData.symbolicNames = []string{
		"", "ALL", "ANY", "BRANCHES", "CONSECUTIVE", "DO", "GOAL", "HELPERS",
		"IF", "NONE", "PIECE", "POS", "POSITION", "PREPARE", "RUNS", "STEP",
		"STEPS", "COLON", "COMMA", "QUESTIONMARK", "PRIME", "LPAREN", "RPAREN",
		"LBRACKET", "RBRACKET", "AND", "OR", "NOT", "NUMBER", "WORD", "LINE_COMMENT",
		"BLOCK_COMMENT", "WS",
	}
	staticData.ruleNames = []string{
		"algorithmFile", "helpers", "helperLine", "steps", "step", "stepLine",
		"goal", "runs", "branches", "doDef", "branch", "ifBranch", "prepareBranch",
		"consecutive", "algorithm", "turn", "boolExpr", "unaryOp", "binaryOp",
		"expr", "unaryExpr", "binaryExpr", "functionalExpr", "function", "parameter",
		"singleNode", "node", "piece", "position", "coord", "list", "sides",
		"side",
	}
	staticData.predictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// AlgorithmParserInit initializes any static state used to implement AlgorithmParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewAlgorithmParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func AlgorithmParserInit() {
	staticData := &algorithmparserParserStaticData
	staticData.once.Do(algorithmparserParserInit)
}

// NewAlgorithmParser produces a new parser instance for the optional input antlr.TokenStream.
func NewAlgorithmParser(input antlr.TokenStream) *AlgorithmParser {
	AlgorithmParserInit()
	this := new(AlgorithmParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &algorithmparserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.predictionContextCache)
	this.RuleNames = staticData.ruleNames
	this.LiteralNames = staticData.literalNames
	this.SymbolicNames = staticData.symbolicNames
	this.GrammarFileName = "AlgorithmParser.g4"

	return this
}

// AlgorithmParser tokens.
const (
	AlgorithmParserEOF           = antlr.TokenEOF
	AlgorithmParserALL           = 1
	AlgorithmParserANY           = 2
	AlgorithmParserBRANCHES      = 3
	AlgorithmParserCONSECUTIVE   = 4
	AlgorithmParserDO            = 5
	AlgorithmParserGOAL          = 6
	AlgorithmParserHELPERS       = 7
	AlgorithmParserIF            = 8
	AlgorithmParserNONE          = 9
	AlgorithmParserPIECE         = 10
	AlgorithmParserPOS           = 11
	AlgorithmParserPOSITION      = 12
	AlgorithmParserPREPARE       = 13
	AlgorithmParserRUNS          = 14
	AlgorithmParserSTEP          = 15
	AlgorithmParserSTEPS         = 16
	AlgorithmParserCOLON         = 17
	AlgorithmParserCOMMA         = 18
	AlgorithmParserQUESTIONMARK  = 19
	AlgorithmParserPRIME         = 20
	AlgorithmParserLPAREN        = 21
	AlgorithmParserRPAREN        = 22
	AlgorithmParserLBRACKET      = 23
	AlgorithmParserRBRACKET      = 24
	AlgorithmParserAND           = 25
	AlgorithmParserOR            = 26
	AlgorithmParserNOT           = 27
	AlgorithmParserNUMBER        = 28
	AlgorithmParserWORD          = 29
	AlgorithmParserLINE_COMMENT  = 30
	AlgorithmParserBLOCK_COMMENT = 31
	AlgorithmParserWS            = 32
)

// AlgorithmParser rules.
const (
	AlgorithmParserRULE_algorithmFile  = 0
	AlgorithmParserRULE_helpers        = 1
	AlgorithmParserRULE_helperLine     = 2
	AlgorithmParserRULE_steps          = 3
	AlgorithmParserRULE_step           = 4
	AlgorithmParserRULE_stepLine       = 5
	AlgorithmParserRULE_goal           = 6
	AlgorithmParserRULE_runs           = 7
	AlgorithmParserRULE_branches       = 8
	AlgorithmParserRULE_doDef          = 9
	AlgorithmParserRULE_branch         = 10
	AlgorithmParserRULE_ifBranch       = 11
	AlgorithmParserRULE_prepareBranch  = 12
	AlgorithmParserRULE_consecutive    = 13
	AlgorithmParserRULE_algorithm      = 14
	AlgorithmParserRULE_turn           = 15
	AlgorithmParserRULE_boolExpr       = 16
	AlgorithmParserRULE_unaryOp        = 17
	AlgorithmParserRULE_binaryOp       = 18
	AlgorithmParserRULE_expr           = 19
	AlgorithmParserRULE_unaryExpr      = 20
	AlgorithmParserRULE_binaryExpr     = 21
	AlgorithmParserRULE_functionalExpr = 22
	AlgorithmParserRULE_function       = 23
	AlgorithmParserRULE_parameter      = 24
	AlgorithmParserRULE_singleNode     = 25
	AlgorithmParserRULE_node           = 26
	AlgorithmParserRULE_piece          = 27
	AlgorithmParserRULE_position       = 28
	AlgorithmParserRULE_coord          = 29
	AlgorithmParserRULE_list           = 30
	AlgorithmParserRULE_sides          = 31
	AlgorithmParserRULE_side           = 32
)

// IAlgorithmFileContext is an interface to support dynamic dispatch.
type IAlgorithmFileContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Steps() IStepsContext
	EOF() antlr.TerminalNode
	Helpers() IHelpersContext

	// IsAlgorithmFileContext differentiates from other interfaces.
	IsAlgorithmFileContext()
}

type AlgorithmFileContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyAlgorithmFileContext() *AlgorithmFileContext {
	var p = new(AlgorithmFileContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_algorithmFile
	return p
}

func (*AlgorithmFileContext) IsAlgorithmFileContext() {}

func NewAlgorithmFileContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *AlgorithmFileContext {
	var p = new(AlgorithmFileContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_algorithmFile

	return p
}

func (s *AlgorithmFileContext) GetParser() antlr.Parser { return s.parser }

func (s *AlgorithmFileContext) Steps() IStepsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStepsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStepsContext)
}

func (s *AlgorithmFileContext) EOF() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserEOF, 0)
}

func (s *AlgorithmFileContext) Helpers() IHelpersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHelpersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHelpersContext)
}

func (s *AlgorithmFileContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *AlgorithmFileContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) AlgorithmFile() (localctx IAlgorithmFileContext) {
	this := p
	_ = this

	localctx = NewAlgorithmFileContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, AlgorithmParserRULE_algorithmFile)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	p.SetState(67)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	if _la == AlgorithmParserHELPERS {
		{
			p.SetState(66)
			p.Helpers()
		}

	}
	{
		p.SetState(69)
		p.Steps()
	}
	{
		p.SetState(70)
		p.Match(AlgorithmParserEOF)
	}

	return localctx
}

// IHelpersContext is an interface to support dynamic dispatch.
type IHelpersContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	HELPERS() antlr.TerminalNode
	COLON() antlr.TerminalNode
	AllHelperLine() []IHelperLineContext
	HelperLine(i int) IHelperLineContext

	// IsHelpersContext differentiates from other interfaces.
	IsHelpersContext()
}

type HelpersContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHelpersContext() *HelpersContext {
	var p = new(HelpersContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_helpers
	return p
}

func (*HelpersContext) IsHelpersContext() {}

func NewHelpersContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HelpersContext {
	var p = new(HelpersContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_helpers

	return p
}

func (s *HelpersContext) GetParser() antlr.Parser { return s.parser }

func (s *HelpersContext) HELPERS() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserHELPERS, 0)
}

func (s *HelpersContext) COLON() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserCOLON, 0)
}

func (s *HelpersContext) AllHelperLine() []IHelperLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IHelperLineContext); ok {
			len++
		}
	}

	tst := make([]IHelperLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IHelperLineContext); ok {
			tst[i] = t.(IHelperLineContext)
			i++
		}
	}

	return tst
}

func (s *HelpersContext) HelperLine(i int) IHelperLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHelperLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHelperLineContext)
}

func (s *HelpersContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HelpersContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) Helpers() (localctx IHelpersContext) {
	this := p
	_ = this

	localctx = NewHelpersContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, AlgorithmParserRULE_helpers)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(72)
		p.Match(AlgorithmParserHELPERS)
	}
	{
		p.SetState(73)
		p.Match(AlgorithmParserCOLON)
	}
	p.SetState(75)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for ok := true; ok; ok = _la == AlgorithmParserWORD {
		{
			p.SetState(74)
			p.HelperLine()
		}

		p.SetState(77)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IHelperLineContext is an interface to support dynamic dispatch.
type IHelperLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	WORD() antlr.TerminalNode
	COLON() antlr.TerminalNode
	Algorithm() IAlgorithmContext

	// IsHelperLineContext differentiates from other interfaces.
	IsHelperLineContext()
}

type HelperLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyHelperLineContext() *HelperLineContext {
	var p = new(HelperLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_helperLine
	return p
}

func (*HelperLineContext) IsHelperLineContext() {}

func NewHelperLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *HelperLineContext {
	var p = new(HelperLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_helperLine

	return p
}

func (s *HelperLineContext) GetParser() antlr.Parser { return s.parser }

func (s *HelperLineContext) WORD() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserWORD, 0)
}

func (s *HelperLineContext) COLON() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserCOLON, 0)
}

func (s *HelperLineContext) Algorithm() IAlgorithmContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAlgorithmContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAlgorithmContext)
}

func (s *HelperLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *HelperLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) HelperLine() (localctx IHelperLineContext) {
	this := p
	_ = this

	localctx = NewHelperLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, AlgorithmParserRULE_helperLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(79)
		p.Match(AlgorithmParserWORD)
	}
	{
		p.SetState(80)
		p.Match(AlgorithmParserCOLON)
	}
	{
		p.SetState(81)
		p.Algorithm()
	}

	return localctx
}

// IStepsContext is an interface to support dynamic dispatch.
type IStepsContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STEPS() antlr.TerminalNode
	COLON() antlr.TerminalNode
	AllStep() []IStepContext
	Step(i int) IStepContext

	// IsStepsContext differentiates from other interfaces.
	IsStepsContext()
}

type StepsContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStepsContext() *StepsContext {
	var p = new(StepsContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_steps
	return p
}

func (*StepsContext) IsStepsContext() {}

func NewStepsContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StepsContext {
	var p = new(StepsContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_steps

	return p
}

func (s *StepsContext) GetParser() antlr.Parser { return s.parser }

func (s *StepsContext) STEPS() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserSTEPS, 0)
}

func (s *StepsContext) COLON() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserCOLON, 0)
}

func (s *StepsContext) AllStep() []IStepContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStepContext); ok {
			len++
		}
	}

	tst := make([]IStepContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStepContext); ok {
			tst[i] = t.(IStepContext)
			i++
		}
	}

	return tst
}

func (s *StepsContext) Step(i int) IStepContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStepContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStepContext)
}

func (s *StepsContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StepsContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) Steps() (localctx IStepsContext) {
	this := p
	_ = this

	localctx = NewStepsContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, AlgorithmParserRULE_steps)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(83)
		p.Match(AlgorithmParserSTEPS)
	}
	{
		p.SetState(84)
		p.Match(AlgorithmParserCOLON)
	}
	p.SetState(88)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for _la == AlgorithmParserSTEP {
		{
			p.SetState(85)
			p.Step()
		}

		p.SetState(90)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStepContext is an interface to support dynamic dispatch.
type IStepContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	STEP() antlr.TerminalNode
	WORD() antlr.TerminalNode
	COLON() antlr.TerminalNode
	AllStepLine() []IStepLineContext
	StepLine(i int) IStepLineContext

	// IsStepContext differentiates from other interfaces.
	IsStepContext()
}

type StepContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStepContext() *StepContext {
	var p = new(StepContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_step
	return p
}

func (*StepContext) IsStepContext() {}

func NewStepContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StepContext {
	var p = new(StepContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_step

	return p
}

func (s *StepContext) GetParser() antlr.Parser { return s.parser }

func (s *StepContext) STEP() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserSTEP, 0)
}

func (s *StepContext) WORD() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserWORD, 0)
}

func (s *StepContext) COLON() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserCOLON, 0)
}

func (s *StepContext) AllStepLine() []IStepLineContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStepLineContext); ok {
			len++
		}
	}

	tst := make([]IStepLineContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStepLineContext); ok {
			tst[i] = t.(IStepLineContext)
			i++
		}
	}

	return tst
}

func (s *StepContext) StepLine(i int) IStepLineContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStepLineContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStepLineContext)
}

func (s *StepContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StepContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) Step() (localctx IStepContext) {
	this := p
	_ = this

	localctx = NewStepContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, AlgorithmParserRULE_step)
	var _la int

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(91)
		p.Match(AlgorithmParserSTEP)
	}
	{
		p.SetState(92)
		p.Match(AlgorithmParserWORD)
	}
	{
		p.SetState(93)
		p.Match(AlgorithmParserCOLON)
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&16616) != 0 {
		{
			p.SetState(94)
			p.StepLine()
		}

		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		_la = p.GetTokenStream().LA(1)
	}

	return localctx
}

// IStepLineContext is an interface to support dynamic dispatch.
type IStepLineContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Goal() IGoalContext
	Helpers() IHelpersContext
	Runs() IRunsContext
	Branches() IBranchesContext
	DoDef() IDoDefContext

	// IsStepLineContext differentiates from other interfaces.
	IsStepLineContext()
}

type StepLineContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStepLineContext() *StepLineContext {
	var p = new(StepLineContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_stepLine
	return p
}

func (*StepLineContext) IsStepLineContext() {}

func NewStepLineContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StepLineContext {
	var p = new(StepLineContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_stepLine

	return p
}

func (s *StepLineContext) GetParser() antlr.Parser { return s.parser }

func (s *StepLineContext) Goal() IGoalContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IGoalContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IGoalContext)
}

func (s *StepLineContext) Helpers() IHelpersContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IHelpersContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IHelpersContext)
}

func (s *StepLineContext) Runs() IRunsContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IRunsContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IRunsContext)
}

func (s *StepLineContext) Branches() IBranchesContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBranchesContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBranchesContext)
}

func (s *StepLineContext) DoDef() IDoDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDoDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDoDefContext)
}

func (s *StepLineContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StepLineContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) StepLine() (localctx IStepLineContext) {
	this := p
	_ = this

	localctx = NewStepLineContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 10, AlgorithmParserRULE_stepLine)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.SetState(105)
	p.GetErrorHandler().Sync(p)

	switch p.GetTokenStream().LA(1) {
	case AlgorithmParserGOAL:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(100)
			p.Goal()
		}

	case AlgorithmParserHELPERS:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(101)
			p.Helpers()
		}

	case AlgorithmParserRUNS:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(102)
			p.Runs()
		}

	case AlgorithmParserBRANCHES:
		p.EnterOuterAlt(localctx, 4)
		{
			p.SetState(103)
			p.Branches()
		}

	case AlgorithmParserDO:
		p.EnterOuterAlt(localctx, 5)
		{
			p.SetState(104)
			p.DoDef()
		}

	default:
		panic(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
	}

	return localctx
}

// IGoalContext is an interface to support dynamic dispatch.
type IGoalContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	GOAL() antlr.TerminalNode
	COLON() antlr.TerminalNode
	BoolExpr() IBoolExprContext

	// IsGoalContext differentiates from other interfaces.
	IsGoalContext()
}

type GoalContext struct {
	*antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyGoalContext() *GoalContext {
	var p = new(GoalContext)
	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(nil, -1)
	p.RuleIndex = AlgorithmParserRULE_goal
	return p
}

func (*GoalContext) IsGoalContext() {}

func NewGoalContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *GoalContext {
	var p = new(GoalContext)

	p.BaseParserRuleContext = antlr.NewBaseParserRuleContext(parent, invokingState)

	p.parser = parser
	p.RuleIndex = AlgorithmParserRULE_goal

	return p
}

func (s *GoalContext) GetParser() antlr.Parser { return s.parser }

func (s *GoalContext) GOAL() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserGOAL, 0)
}

func (s *GoalContext) COLON() antlr.TerminalNode {
	return s.GetToken(AlgorithmParserCOLON, 0)
}

func (s *GoalContext) BoolExpr() IBoolExprContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBoolExprContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBoolExprContext)
}

func (s *GoalContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *GoalContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (p *AlgorithmParser) Goal() (localctx IGoalContext) {
	this := p
	_ = this

	localctx = NewGoalContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 12, AlgorithmParserRULE_goal)

	defer func() {
		p.ExitRule()
	}()

	defer func() {
		if err := recover(); err != nil {
			if v, ok := err.(antlr.RecognitionException); ok {
				localctx.SetException(v)
				p.GetErrorHandler().ReportError(p, v)
				p.GetErrorHandler().Recover(p, v)
			} else {
				panic(err)
			}
		}
	}()

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(107)
		p.Match(AlgorithmParserGOAL)
	}
	{
		p.SetState(108)
		p.Match(AlgorithmParserCOLON)
	}
	{
		p.SetState(109)
		p.boolExpr(0)
	}

	return localctx
}

// IRunsContext is an interface to support dynamic dispatch.
type IRunsContext interface {
	antlr.ParserRuleContext
